--- a/pages/1893_11_28_BOM.md
+++ b/pages/1893_11_28_BOM.md
@@ -14,6 +14,6 @@ To prevent misunderstanding Mrs. Bullock moved that the Special Committee shall 
 
 own members--before the reading of the Amendments to the Club--with the Amendments offered by other members also, for its consideration and submission to the Club. The motion was adopted.
 
-The questions of a blackboard and of a bulletin board, and of other small expenses were brought forward; and the House Committee was authorized to go beyond in some degree the appropriation of $10.00 made for these purposed. Also 25 cents to a boy for carrying books, and 50 cents for laundry work was appropriated.
+The questions of a blackboard and of a bulletin board, and of other small expenses were brought forward; and the House Committee was authorized to go beyond in some degree the appropriation of $10.00 made for these purposes. Also 25 cents to a boy for carrying books, and 50 cents for laundry work was appropriated.
 
 The meeting adjourned.
