--- a/pages/1894_01_02_BOM.md
+++ b/pages/1894_01_02_BOM.md
@@ -6,7 +6,7 @@
 
 The Board of Management of the Woman's Literary Club of Baltimore met on Tuesday, January 2nd, 1894, at the corner of Cathedral and Franklin Streets. Ten members attended this meeting,--the President [Emma Fenwick Brent], Second Vice President [Louisa Courtauld Osburne Haughton],--two Secretaries [Lydia Crane and Annie S. Perot],--Treasurer [Caroline Canfield Bullock],--Mrs. [W. Woolsey] Johnson,--Mrs. [Alice Emma Sauerwein] Lord,--Mrs. [Aileen B. C.] Dammann,--Miss [Sarah H.] Bennett,--and Miss [Mary F.] Grace. The President announced that this was the regular meeting for the reception of the names of proposed new members,--other business being in order afterwards.
 
-The name of Mrs. Remsen, 12 East Riddle Street, proposed by Mrs. Goddard, and seconded by Miss Balch, was read. The second name read was that of Miss Ellen Duvall, proposed by Miss Balch, and seconded by Miss [Mary E.] Evans. Miss Duvall's name, we were told, had received favorable action two years ago. Miss Kate Mason Rowland was proposed by Mrs. Dammann, and seconded by Miss Crane. These three ladies were unanimously elected.
+The name of Mrs. Remsen, 12 East Biddle Street, proposed by Mrs. [Li[ Goddard, and seconded by Miss [Grace] Balch, was read. The second name read was that of Miss Ellen Duvall, proposed by Miss Balch, and seconded by Miss [Mary E.] Evans. Miss Duvall's name, we were told, had received favorable action two years ago. Miss Kate Mason Rowland was proposed by Mrs. Dammann, and seconded by Miss Crane. These three ladies were unanimously elected.
 
 Miss [Lizette Woodworth] Reese, an honorary member, was proposed for regular membership; and the proposal was accepted without opposition.
 
@@ -25,10 +25,9 @@ Over.
 
 [51]
 
-At the close of the literary meeting, the same afternoon, the President asked the members of the Board of Management to come to the platform for a few minutes,--as she had a word or two to say to them. A majority of the Board having come forward, we were informed by the President that the nomination of Mrs. Uhler, as a new member of the Club, had been handed to her during the literary meeting:--but that she thought it came too late for any action to be taken upon it. She wished for the opinions of the members of the Board. They agreed with her that this nomination came too late for the election of this day.
+At the close of the literary meeting, the same afternoon, the President asked the members of the Board of Management to come to the platform for a few minutes,--as she had a word or two to say to them. A majority of the Board having come forward, we were informed by the President that the nomination of Mrs. [Pearl D.] Uhler, as a new member of the Club, had been handed to her during the literary meeting:--but that she thought it came too late for any action to be taken upon it. She wished for the opinions of the members of the Board. They agreed with her that this nomination came too late for the election of this day.
 
 The resignation of Miss Corrinne Jackson was also announced.
 
 The Board informally adjourned.--
 --Read to the Board.
-<hr>
