--- a/pages/1894_01_25_BOM.md
+++ b/pages/1894_01_25_BOM.md
@@ -25,7 +25,7 @@ The business for which we had been called together was announced in a letter fro
 
 [60]
 
-tion she had with an agent of Knabe's piano firm, in which a piano was offered to us for six dollars a month, to rent,--and, for less than five hundred to buy it. Of course, three dollars would be charged for moving it. After some conversation it was decided that, as our income had lately decreased, it would be well--now--to rent, and not to buy a piano.
+tion she had with an agent of Knabe's piano firm,[^Knabe] in which a piano was offered to us for six dollars a month, to rent,--and, for less than five hundred to buy it. Of course, three dollars would be charged for moving it. After some conversation it was decided that, as our income had lately decreased, it would be well--now--to rent, and not to buy a piano.
+[^Knabe]: The Wm. Knabe piano company was founded by German-American immigrant Valentin Wilhelm Ludwig Knabe in the mid-1850s, in Baltimore. Knabe pianos were favored by composers including Camille Saint-Saens and Joseph Lamb; Elvis Presley played a white 1912 Knabe piano. The site of the factory at Eutaw and West Streets is now occupied by M&T Bank Stadium, home of the Baltimore Ravens football team.
 
 Miss Balch asked if the members of a society like the Colonial Dames could be invited to our meetings as individuals, after having been entertained as an association? Without deciding this question, the meeting adjourned.
-<hr>
