--- a/pages/1894_03_27_BOM.md
+++ b/pages/1894_03_27_BOM.md
@@ -10,7 +10,7 @@ Miss [Emma Fenwick] Brent the Chairman called the meeting to order.
 
 The Chairman laid before the Board a proposition to join the Federation of Woman's Clubs of America. She read a letter from Mrs. Emerson Brown of New Jersey, the President of the Federation, and also a printed circular giving the conditions of joining, and the advantages of belonging to the Federation. It was moved and seconded that the Club should join the Federation, and the motion was carried without opposition. Miss Brent agreed to write to Mrs. Brown on this subject without delay.
 
-The subject of the [?late] Incorporation of the Club being in order, our own copy of the Act of Incorporation, only signed and attested, was laid before us; and
+The subject of the late Incorporation of the Club being in order, our own copy of the Act of Incorporation, only signed and attested, was laid before us; and
 
 [68]
 
@@ -25,7 +25,7 @@ The proposition being made to proceed to the election of officers, Mrs. Dammann 
 [69]
 
 tion went into effect,--without change. Mrs. Manly seconded this motion; and it was carried, by a standing vote.[^cranenote3]
-[^cranenote3]: A footnote at the bottom of the page reads, "The effect of this vote was to re-instate until the annual election in May: Miss Brent, President,--Mrs. Johnson First Vice President,--Secretaries, Miss Crane and Mrs. Manly,--Treasurer, Mrs. Bullock; Committee, Mesdames Dammann Lord, Early, Wrenshall; Misses Balch and Grace. L.C.--Secretary."
+[^cranenote3]: A footnote at the bottom of the page reads, "The effect of this vote was to re-instate until the annual election in May: Miss Brent, President,--Mrs. Johnson First Vice President,--Secretaries, Miss Crane and Mrs. Manly,--Treasurer, Mrs. Bullock; Committee, Mesdames Dammann, Lord, Early, Wrenshall; Misses Balch and Grace. L.C.--Secretary."
 
 The question then arose of a meeting of the Club to adopt a Constitution, and to transact other important business. As it was considered not advisable to displace a literary meeting for business, it was finally decided that this meeting should be held on Friday the 30th of March, at 4 P.M.
 
@@ -35,11 +35,11 @@ The question of proposing Amendments to the Constitution was then discussed. Thr
 
 shall have a proposer, and two seconders, and shall be proposed by a member of one year's standing. Also, that names should be considered at least one week before being voted upon.
 
-Mrs. Johnson then offered a resolution--to go before the Club,--which, after discussion, was amended by Mrs. Bullock in the change of the word "recommend" to "suggest". Mrs. Johnson accepted the Amendment, and her resolution then read:
+Mrs. Johnson then offered a resolution--to go before the Club,--which, after discussion, was amended by Mrs. Bullock in the change of the word "recommend" to "suggest." Mrs. Johnson accepted the Amendment, and her resolution then read:
 
-"That the Board of Management suggest to the Club that the election of new members shall be left to the Board, as before; and that the proposed names shall be sent to the Board on our before the first meeting in April, that the Board may have one week for the consideration of these names. Or, if the Club at large shall desire to vote upon the names of new members, that the proposed names shall be posted in the Committee room, one week before the election shall take place."
+"That the Board of Management suggest to the Club that the election of new members shall be left to the Board, as before; and that the proposed names shall be sent to the Board on or before the first meeting in April, that the Board may have one week for the consideration of these names. Or, if the Club at large shall desire to vote upon the names of new members, that the proposed names shall be posted in the Committee room, one week before the election shall take place."
 
-Miss Haughton objected to this resolution, and moved an amendment: "That we shall not give our opinion on this subject unless it is asked". The amendment was
+Miss Haughton objected to this resolution, and moved an amendment: "That we shall not give our opinion on this subject unless it is asked." Then amendment was
 
 [71]
 
@@ -48,4 +48,3 @@ seconded by Mrs. Manly, voted upon, and defeated. Some discussion arose whether,
 Finally Mrs. Johnson's resolution was seconded by Mrs. Early; and carried, by seven votes in favor to five against it.--The meeting adjourned.
 
 Not Read to Board.
-<hr>
