--- a/pages/1894_04_27_BOM.md
+++ b/pages/1894_04_27_BOM.md
@@ -12,8 +12,7 @@ The question of the conduct of elections in the Club was discussed;
 
 in view of the fact that our next general election will take place on the third Tuesday in the coming month. The plan proposed by the minority of the Committee who were appointed last October, to consider and formulate Amendments to the Constitution, was informally approved; and suggestions were made for giving information with regard to it to the members of the Club.
 
-The Recording Secretary asked leave to make a personal request from the Board. She explained that, on account of threatened trouble to her eyesight, she was obliged to report herself as very much behindhand in the copying of her Minutes into the Club Book. She very much regretted that she felt it necessary to ask the Board to allow the copying to be done at the expense of the Club. It was moved and seconded that the Secretary's request be complied with; and the motion was carried, without opposition.[^eyes]
-[^eyes]: Lydia Crane's eye trouble started as early as 1894.
+The Recording Secretary asked leave to make a personal request from the Board. She explained that, on account of threatened trouble to her eyesight, she was obliged to report herself as very much behindhand in the copying of her Minutes into the Club Book. She very much regretted that she felt it necessary to ask the Board to allow the copying to be done at the expense of the Club. It was moved and seconded that the Secretary's request be complied with; and the motion was carried, without opposition.
 
 After some informal consultation, the meeting adjourned.
 
