--- a/pages/1894_05_01_BOM.md
+++ b/pages/1894_05_01_BOM.md
@@ -4,7 +4,7 @@
 
 ### Board of Management. May 1st, 1894.
 
-The Board of Management of the Woman's Literary Club of Baltimore held a meeting on Tuesday, May 1st, 1894, at the corner of Cathedral and Franklin Streets. In all nine members attended this meeting; the President [Emma Fenwick Brent],--two Vice Presidents[Mrs. W. Woolsey Johnson and Louisa Courtauld Osburne Haughton],--Recording Secretary [Lydia Crane],--Treasurer [Caroline Canfield Bullock],--Mrs. [Alice Emma Sauerwein] Lord,--Miss [Mary F.] Grace,--Miss [Grace] Balch,--and Mrs. [Letitia Humphreys Yonge] Wrenshall. Miss Grace came late.
+The Board of Management of the Woman's Literary Club of Baltimore held a meeting on Tuesday, May 1st, 1894, at the corner of Cathedral and Franklin Streets. In all nine members attended this meeting; the President [Emma Fenwick Brent],--two Vice Presidents [Mrs. W. Woolsey Johnson and Louisa Courtauld Osburne Haughton],--Recording Secretary [Lydia Crane],--Treasurer [Caroline Canfield Bullock],--Mrs. [Alice Emma Sauerwein] Lord,--Miss [Mary F.] Grace,--Miss [Grace] Balch,--and Mrs. [Letitia Humphreys Yonge] Wrenshall. Miss Grace came late.
 
 The President called the meeting to order, and after some suggestions with regard to the conduct of business,--reminded us that the first business in order was the presentation of the names of candidates for membership in our Club, this being the occasion of voting upon them.
 
@@ -24,7 +24,7 @@ and Miss Grace. She was elected by the same unanimous vote.
 
 5 The fifth name was that of Miss Effie Johnson, 33 West North Avenue; proposed by Mrs. Goddard, seconded by Mrs. [Maria W.] Miller and Mrs. Tait. Elected by the same eight votes.
 
-6 The sixth name was that of Miss Margaret A. Klein, Entow Street; proposed by Mrs. [Elizabeth Turner] Graham, seconded by Mrs. Tait. Elected by the same vote as before.
+6 The sixth name was that of Miss Margaret A. Klein, Eutaw Street; proposed by Mrs. [Elizabeth Turner] Graham, seconded by Mrs. Tait. Elected by the same vote as before.
 
 7 The seventh name was that of Mrs. W. P. Morgan, 313 West Monument Street; proposed by Mrs. T. J. Morris, seconded by Miss [Eveline Rieman] Early. Mrs. Morgan also received all of the eight votes cast.
 
@@ -44,13 +44,13 @@ Mrs. Tait, seconded by Miss Brent. Elected by the same vote as before.
 
 13 The thirteenth name was that of Mrs. P. R. [Pearl D.] Uhler, proposed by Mrs. Manly, and seconded by Mrs. Wrenshall and Miss Brent. Mrs. Uhler was unanimously elected.
 
-14 The fourteenth name was that of Mrs. Yates Stirling, Lanvale Street; propose by Mrs. Frederick [Florence McIntyre] Tyson, seconded by Miss Brent. She was also unanimously elected.
+14 The fourteenth name was that of Mrs. Yates Stirling, Lanvale Street; proposed by Mrs. Frederick [Florence McIntyre] Tyson, seconded by Miss Brent. She was also unanimously elected.
 
 15 The fifteenth name was that of Miss Annie Weston Whitney; proposed by Miss Zacharias, seconded by Miss Cloud. She was elected by the same vote.
 
 [76]
 
-The sixteenth name was that of Mrs. Thomas [Harriet Louise Wescott] Hill, proposed by Mrs. Easter, seconded by Mrs. Miller. She was also unanimously elected.
+The sixteenth name was that of Mrs. Thomas [Harriet Louise Westcott] Hill, proposed by Mrs. Easter, seconded by Mrs. Miller. She was also unanimously elected.
 
 The seventeenth name was that of Mrs. Thomas Rhinehart; proposed by Mrs. Wiley, seconded by Mrs. Miller. Also unanimously elected.
 
@@ -58,7 +58,7 @@ The eighteenth name was that of Mrs. George K. [Margaret Ann Worden] McGaw, prop
 
 The nineteenth name was that of Miss Martha Ford, proposed by Mrs. Manly, and seconded by Miss Malloy. She was also unanimously elected.
 
-The President then spoke of the approaching election for officers of the Club, and of the necessity for a system of rules in this election. We were reminded of the "Election Rules offered for Trial by the Minority of the special Committee on Amendments to the Constitution last Fall. Mrs. Johnson moved that a trial should be made of these rules at the approaching election. Miss Balch seconded the motion, and it was carried without opposition. We were reminded that the printed sheets filled up with the nominating lists of the members ought to be in
+The President then spoke of the approaching election for officers of the Club, and of the necessity for a system of rules in this election. We were reminded of the "Election Rules offered for Trial["] by the Minority of the special Committee on Amendments to the Constitution last Fall. Mrs. Johnson moved that a trial should be made of these rules at the approaching election. Miss Balch seconded the motion, and it was carried without opposition. We were reminded that the printed sheets filled up with the nominating lists of the members ought to be in
 
 [77]
 
@@ -77,4 +77,3 @@ Mrs. Johnson moved that this Committee do not include members of the Board of Ma
 Grace seconded the motion;--but it was defeated.--The meeting adjourned.
 
 --Some of the members appointed to serve on this Committee on Election declining to serve, it became finally: Mrs. Wylie,--Mrs. Carter,--Mrs. Wrenshall,--Mrs. Whitelock,--and Mrs. Goddard.
-<hr>
