--- a/pages/1893_10_31_BOM.md
+++ b/pages/1893_10_31_BOM.md
@@ -12,9 +12,9 @@ The Resolutions proposed by the President, and adopted by the Board of Managemen
 
 [44]
 
-The Resolution offered on that occasion--verbally--by Miss King, and adopted by the Board, was read from Miss King's own version, given in writing after the meeting,--and sent to the Secretary,--as follows:--"It was moved and seconded that, at a meeting to be called, October 31st, the Club shall vote whether it will rest the right of preparing a revision of the Constitution in the hands of the Executive Committee, or whether it will appoint a special Committee for that purpose."
+The Resolution offered on that occasion--verbally--by Miss [Elizabeth T.] King, and adopted by the Board, was read from Miss King's own version, given in writing after the meeting,--and sent to the Secretary,--as follows:--"It was moved and seconded that, at a meeting to be called, October 31st, the Club shall vote whether it will rest the right of preparing a revision of the Constitution in the hands of the Executive Committee, or whether it will appoint a special Committee for that purpose."
 
-It was proposed, and agreed to, that any Committee which was to be appointed by the Club, "On Amendments", should have ample time to discuss and formulate all Amendments to be proposed to the Club. Six weeks for this purpose, it was agreed, would be necessary, which would bring the time for the vote of the Club to a meeting late in December. It was considered desirable to finish this work of Amendments, if possible, before the 1st of January,--the time appointed for the election of new members.
+It was proposed, and agreed to, that any Committee which was to be appointed by the Club, "On Amendments," should have ample time to discuss and formulate all Amendments to be proposed to the Club. Six weeks for this purpose, it was agreed, would be necessary, which would bring the time for the vote of the Club to a meeting late in December. It was considered desirable to finish this work of Amendments, if possible, before the 1st of January,--the time appointed for the election of new members.
 
 A resolution moved by Mrs. Johnson was adopted: That a printed copy of the proposed Amendments shall be sent to every member of the
 
@@ -22,9 +22,9 @@ A resolution moved by Mrs. Johnson was adopted: That a printed copy of the propo
 
 Club for her consideration before the 11th of December.
 
-An enquiry from Miss Szold with regard to non-resident membership was unavoidably deferred.
+An enquiry from Miss [Henrietta] Szold with regard to non-resident membership was unavoidably deferred.
 
-The question of electing a member of the Board of Management to fill the vacancy caused by the resignation of Miss Szold from that position, was brought before us by the President. Mrs. Goddard and Miss [Sarah H.] Bennett were nominated. A ballot was taken, and Miss Bennett was elected Miss Szold's successor.
+The question of electing a member of the Board of Management to fill the vacancy caused by the resignation of Miss Szold from that position, was brought before us by the President. Mrs. [Li] Goddard and Miss [Sarah H.] Bennett were nominated. A ballot was taken, and Miss Bennett was elected Miss Szold's successor.
 
 Some conversation followed on the question of defining the duties of the House Committee.
 
