--- a/pages/1894_01_09_BOM.md
+++ b/pages/1894_01_09_BOM.md
@@ -22,11 +22,11 @@ After some discussion on this subject, the President decided that it was out of 
 
 ceeding to the business for which this meeting had been called; namely: the filling of vacancies in the Board of Management.
 
-The first matter in order was the filling of the vacant place caused by the resignation of Miss King as a member of the Board. The name of Mrs. [Li] Goddard was proposed, but it was said that she could not serve at present, having a sick child to claim her attention. The names of Mrs. Wrenshall and Mrs. Manly were also suggested, but it was said that they had declined also to serve on the Board.
+The first matter in order was the filling of the vacant place caused by the resignation of Miss King as a member of the Board. The name of Mrs. [Li] Goddard was proposed, but it was said that she could not serve at present, having a sick child to claim her attention. The names of Mrs. [Letitia Humphreys Yonge] Wrenshall and Mrs. [Lily Tyson] Manly were also suggested, but it was said that they had declined also to serve on the Board.
 
 Mrs. Dammann nominated Miss Balch. Miss Haughton seconded the nomination; and it was carried immediately.
 
-Miss Haughton nominated Mrs. Shippen to fill the place of Miss Brown. Mrs. Dammann seconded the nomination and it received the same vote as the former one.
+Miss Haughton nominated Mrs. [Rebecca Lloyd Nicholson] Shippen to fill the place of Miss Brown. Mrs. Dammann seconded the nomination and it received the same vote as the former one.
 
 The election of a First Vice President was next in order. Mrs. Bullock nominated Mrs. Dammann for that office; Miss Brent seconded the nomination. Miss Grace nominated Mrs. Johnson. Miss Crane seconded the nomination. The two candidates not voting, Mrs. Johnson re-
 
