--- a/pages/1894_01_22_BOM.md
+++ b/pages/1894_01_22_BOM.md
@@ -6,11 +6,11 @@
 
 The Board of Management of the Woman's Literary Club of Baltimore met on Monday, January 22nd, 1894, at the corner of Cathedral and Franklin Streets. Seven members attended this meeting,--the President [Emma Fenwick Brent],--Recording Secretary [Lydia Crane],--Treasurer [Caroline Canfield Bullock],--Mrs. [Aileen B. C] Dammann,--Miss [Grace] Balch,--Mrs. [Maud Graham] Early,--and Mrs. [Alice Emma Sauerwein] Lord.--The Recording Secretary read the minutes of the former meeting on January 16th.
 
-The President announced that Miss Kate Mason Rowland had informed us that she would not be able to become an active memebr of the CLub, as much of her time was now spent in Washington; but that she would accept non-
+The President announced that Miss Kate Mason Rowland had informed us that she would not be able to become an active member of the CLub, as much of her time was now spent in Washington; but that she would accept non-
 
 [57]
 
-resident membership. Miss Brent proposed that Miss Rowland, who had already been elected a member of the Club, should be made a non-resident member. The Board of Management vote to make Miss Rowland a non-resident member.
+resident membership. Miss Brent proposed that Miss Rowland, who had already been elected a member of the Club, should be made a non-resident member. The Board of Management voted to make Miss Rowland a non-resident member.
 
 Miss Brent nominated Mrs. [Louise Clarkson] Whitelock as Corresponding Secretary of the Club. Miss Balch seconded the motion; and Mrs. Whitelock was elected unanimously.
 
@@ -31,4 +31,3 @@ The declination of membership in the Club by Mrs. Remson, on account of many eng
 Names were mentioned of desirable new members, and of those who, it was believed, desired to enter the Club.
 
 The meeting adjourned.
-<hr>
