--- a/pages/1894_06_09_BOM.md
+++ b/pages/1894_06_09_BOM.md
@@ -5,11 +5,11 @@
 The Board of Directors of the Woman's Literary Club of Baltimore met on Saturday, June 9th, 1894, at the house of Miss Emma [Fenwick] Brent. Eight members were present;--the First Vice President [Mrs. W. Woolsey Johnson],--two Secretaries [Lydia Crane and Lily Tyson Manly],--Treasurer [Caroline Canfield Bullock],--Mrs. [Alice Emma Sauerwein] Lord,--Mrs. [Maud Graham] Early,--Mrs. [Letitia Humphreys Yonge] Wrenshall,--and Miss [Louise] Malloy.
 
 The First vice President, Mrs. Bullock,[^bullock] called the meeting to order, and announced that the business before us was the appointment of a House Committee, to superintend the necessary arrangements regarding our rooms and furniture for the summer season.
-[^bullock]: It's unclear whether Bullock's organizational role is misidentified or if Mrs. Johnson actuall called the meeting to order.
+[^bullock]: As indicated in the previous paragraph, Bullock was in fact the Treasurer of the Club at this time, not the First Vice President.
 
 [81]
 
-Miss Haughton was nominated as Chairman of this Committee, and elected unanimously, Miss [Grace] Balch was nominated andelected with the same unanimity. Mrs. [Alice Emma Sauerwein] Lord was also unanimously elected.
+Miss Haughton was nominated as Chairman of this Committee, and elected unanimously, Miss [Grace] Balch was nominated and elected with the same unanimity. Mrs. [Alice Emma Sauerwein] Lord was also unanimously elected.
 
 There being no further pressing business before the Board of Directors, the meeting adjourned.
 
